--- a/source/Reflexion.adoc
+++ b/source/Reflexion.adoc
@@ -2,40 +2,62 @@
 
 == Prozess
 
-Zeit Menagement eines der grössten Probleme die wir hatten.
-Ich persondlich bin schon immer ein Chaot und nicht gut im Zeit Menagement.
-Damit ich die Arbeit dennoch fertig machen kann, ohne in der letzten Woche die Nächte durchzuarbeiten, bat ich meine Mutter um Hilfe.
-Sie erstellte mir für die letzten 3 Wochen vor abgabe einen Strikten Zeitplan den ich einhalten musste.
+Zeitmanagement eines der grössten Probleme die wir hatten.
+Ich persönlich bin schon immer ein Chaot und nicht gut im Zeitmanagement.
+Damit ich die Arbeit dennoch fertigmachen kann, ohne in der letzten Woche die Nächte durchzuarbeiten, bat ich meine Mutter um Hilfe.
+Sie erstellte mir für die letzten 3 Wochen vor Abgabe einen Strikten Zeitplan den ich einhalten musste.
 Anfangs hat es sehr gut Funktioniert.
-Dennoch musste ich an zwi Wochenenden sehr viel schreiben und korrigieren.
+Dennoch musste ich an zwei Wochenenden sehr viel schreiben und korrigieren.
 Bessonders das letzte Wochenende vor der Abgabe war sehr anstrengend.
 Ich habe an beiden Tagen über sechs Stunden an der Arbeit gearbeitet und auch mein Vater hat mir an diesen Tagen geholfen.
-Er korrigierte meine Rechtschreibungsfehler und gab mir Tips was ich noch ändern oder anpassen könnte.
-Da wir meherer Male unser Thema wechselten und nie wirklich sicher waren was wir genau tun sollten haben wir nie einen Definitiven Zeitplan erstellt.
+Er korrigierte meine Rechtschreibungsfehler und gab mir Tipps was ich noch ändern oder anpassen könnte.
+Da wir mehrer Male unser Thema wechselten und nie wirklich sicher waren was wir genau tun sollten haben wir nie einen Definitiven Zeitplan erstellt.
 Für mich Persöndlich war die Rechtschreibung auch ein sehr grosses Problem.
 Bei den Korrekturen brauchte ich sehr viel Hilfe.
-Dazu kam das ich vor Weinachten eine Operation am Steissbein hatte was mich daran hinderte an der Arbeit konzentriert zu arbeiten.
-Durch die Schmerzen konnte ich in den Weinachtsferien nicht an der Arbeit schreiben.
+Dazu kam das ich vor Weihnachten eine Operation am Steissbein hatte was mich daran hinderte an der Arbeit konzentriert zu arbeiten.
+Durch die Schmerzen konnte ich in den Weihnachtsferien nicht an der Arbeit schreiben.
 Dies war ein Problem da der Abgabe Termin immer näher rückte.
 
 == Arbeit
 
 Ich bin mit unserem End Ergebnis zufrieden.
-Mit einer besseren Planung und ohne rückschläge in Themenwahl oder Gesundheitlichen Gründen bin ich mir sicher hätten wir mehr aus der Arbeit herausholen können.
-Dennoch bin ich zufrienden mit der Arbeit.
+Mit einer besseren Planung und ohne Rückschläge in Themenwahl oder Gesundheitlichen Gründen bin ich mir sicher hätten wir mehr aus der Arbeit herausholen können.
+Dennoch bin ich zufrieden mit der Arbeit.
 Ich hatte auch Spass die Arbeit zu schreiben auch wenn es sehr lange dauerte.
-Bessonders Spass machten mir die Diskusionen mit meinem Vater.
+Bessonders Spass machten mir die Diskussionen mit meinem Vater.
 Als ich merkte das ich in einen guten Schreibfluss kam, wurde ich noch Motivierter die Arbeit zu schreiben.
 Mir freute sehr das die Zitate in der Arbeit meiner Meinung nach so gut aussehen.
 
 == Zusammenarbeit
 
 Hier muss ich sagen haperte es oft in unserem Team.
-Unser Zeitmenagement war sehr schlecht und auch die Komunikation machte Probleme.
+Unser Zeitmanagement war sehr schlecht und auch die Kommunikation machte Probleme.
 Anfangs wussten wir gar nicht was wir eigentlich machen sollten und machten dann nichts dagegen.
-Leider hat Tenzin das Dossier welches wir von der Schule bekommen haben warscheindlich nicht ein einzigesmal durchgelesen.
+Leider hat Tenzin das Dossier welches wir von der Schule bekommen haben warscheinlich nicht ein einziges mal durchgelesen.
 Dazu kam das Tenzin für die Einleitung und das Abstract verantwortlich war.
-Als ich die Einleitung und das Abstract anschaute wurde mir klar das ich fast alles nochmal umschreiben muss.
+Als ich die Einleitung und das Abstract anschaute wurde mir klar, dass ich fast alles nochmal umschreiben muss.
 Auch die anderen Teile der Arbeit waren sehr umgangssprachlich geschrieben.
 Ich musste extrem viel der Arbeit umschreiben oder neu schreiben, was dazu führe das ich am letzten Wochenende so lange daran arbeitete.
 Leider muss ich sagen das ich ca. 80% der Arbeit geschrieben habe, da ich so viel ändern musste.
+Dies frustrierte mich auch da ich sehr viel alleine machen musste.
+Auch als ich versuchte mit Tenzin zusammenzuarbeiten wurde nicht daraus.
+Ich versuchte ihn zu mir einzuladen sodass wir die Arbeit zusammen überarbeiten könnten, jedoch konnte er sich die Zeit dafür nicht nehmen und ich musste alles alleine machen.
+
+== Erkenntnisse
+
+Mir wurde klar, dass ich klare Probleme im Zeitmanagement habe.
+Jedoch liegt mir das Schreiben, da ich zwar lange an der Arbeit geschrieben habe, aber ich nie die Lust daran verlor.
+Ich würde sagen das ich sehr gut am Ball bleiben kann, wenn ich mal angefangen habe zu Arbeiten.
+Anfangs war ich zu leichtsinnig und habe mich nicht sehr auf die Arbeit konzentriert.
+Schnell merkte ich das es so nicht weiter geht und ich mich mehr auf die Arbeit konzentriern muss.
+Eine klare schwäche ist meine Rechtschreibung.
+Leider sehe ich viele Fehler die ich mache selbst beim dritten Mal durchlesen nicht.
+Auch meine Sprache war anfangs sehr umgangssprachlich und nicht gut für eine Wissenschaftliche Arbeit.
+Jedoch sehe ich meine Stärke darin das ich am Ball geblieben bin und die Arbeit fertig geschrieben habe.
+Ausserdem konnte ich mich gut in das Thema einlesen und fand dies auch sehr Spannend.
+In Zukunft würde ich eine Wissenschaftliche Arbeit nie wieder zu zweit schreiben.
+Zu viele Störfaktoren und am Schluss schreibt eine Person fast die ganze Arbeit alleine.
+Ich muss mich ganz klar noch im Zeitmamagement verbessern, dazu sollte ich auch an meiner Rechtschreibung und meiner Kommunikation mit Teammitglider arbeiten.
+Ich wäre bei einer nächsten Arbeit klar definieren was genau ich mache.
+Einen guten Zeitplan erstellen und möglichst gut mit Teammitglider in Kontakt bleiben.
+Dazu werde ich den Zeitplan in einer weiteren Arbeit strikter einhalten und befolgen.
