--- a/source/Schlusswort.adoc
+++ b/source/Schlusswort.adoc
@@ -3,7 +3,7 @@
 Uns ist klar, dass man mit einer kleinen Umfrage nicht alle Aspekte abdecken kann um unsere These fundiert zu beantworten.
 Trotzdem decken wir mit dieser Arbeit einen Teil der Stimmen der Gaming-Community.
 Die Ergebnisse, die uns die Befragten lieferten, bestätigten unsere These nicht.
-Die Spieler wollen noch immer eine vertiefte Handlung und nicht nur einen oberflächlichen Onlinemodus.
+Die Spieler wollen noch immer eine vertiefte Handlung und nicht nur einen ober&#173;flächlichen Onlinemodus.
 
 Unser Fazit lautet also, dass die Relevanz der Story in Videospielen in den letzten Jahren nicht abgenommen hat.
 Wir denken, dass auch in Zukunft die Industrie sich an Stories halten wird, zumindest wenn die Spie&#173;ler weiterhin diese Einstellung behalten.
