--- a/source/Reflexion.adoc
+++ b/source/Reflexion.adoc
@@ -2,10 +2,10 @@
 
 == Prozess
 
-Zeitmanagement eines der grössten Probleme die wir hatten.
-Ich persönlich bin schon immer ein Chaot und nicht gut im Zeitmanagement.
+Zeitmanagement ist eines der grössten Probleme die wir hatten.
+Ich persönlich bin schon immer ein Chaot gewesen und bin nicht sehr gut im Zeitmanagement.
 Damit ich die Arbeit dennoch fertigmachen kann, ohne in der letzten Woche die Nächte durchzuarbeiten, bat ich meine Mutter um Hilfe.
-Sie erstellte mir für die letzten 3 Wochen vor Abgabe einen Strikten Zeitplan den ich einhalten musste.
+Sie half mir einen Zeitplan für die letzten 3 Wochen vor Abgabe zu machen, einen Strikten Zeitplan den ich einhalten musste.
 Anfangs hat es sehr gut Funktioniert.
 Dennoch musste ich an zwei Wochenenden sehr viel schreiben und korrigieren.
 Bessonders das letzte Wochenende vor der Abgabe war sehr anstrengend.
@@ -14,7 +14,7 @@ Er korrigierte meine Rechtschreibungsfehler und gab mir Tipps was ich noch ände
 Da wir mehrer Male unser Thema wechselten und nie wirklich sicher waren was wir genau tun sollten haben wir nie einen Definitiven Zeitplan erstellt.
 Für mich Persöndlich war die Rechtschreibung auch ein sehr grosses Problem.
 Bei den Korrekturen brauchte ich sehr viel Hilfe.
-Dazu kam das ich vor Weihnachten eine Operation am Steissbein hatte was mich daran hinderte an der Arbeit konzentriert zu arbeiten.
+Dazu kam das ich vor Weihnachten eine Operation am Steissbein hatte, was mich daran hinderte an der Arbeit konzentriert zu arbeiten.
 Durch die Schmerzen konnte ich in den Weihnachtsferien nicht an der Arbeit schreiben.
 Dies war ein Problem da der Abgabe Termin immer näher rückte.
 
@@ -23,31 +23,32 @@ Dies war ein Problem da der Abgabe Termin immer näher rückte.
 Ich bin mit unserem End Ergebnis zufrieden.
 Mit einer besseren Planung und ohne Rückschläge in Themenwahl oder Gesundheitlichen Gründen bin ich mir sicher hätten wir mehr aus der Arbeit herausholen können.
 Dennoch bin ich zufrieden mit der Arbeit.
-Ich hatte auch Spass die Arbeit zu schreiben auch wenn es sehr lange dauerte.
+Ich hatte auch Spass die Arbeit zu schreiben, auch wenn es sehr lange dauerte.
 Bessonders Spass machten mir die Diskussionen mit meinem Vater.
-Als ich merkte das ich in einen guten Schreibfluss kam, wurde ich noch Motivierter die Arbeit zu schreiben.
-Mir freute sehr das die Zitate in der Arbeit meiner Meinung nach so gut aussehen.
+Als ich merkte das ich in einen guten Schreibfluss kam, wurde ich noch motivierter die Arbeit zu schreiben.
+Mich freute sehr das die Zitate in der Arbeit so gut aussehen.
 
 == Zusammenarbeit
 
-Hier muss ich sagen haperte es oft in unserem Team.
-Unser Zeitmanagement war sehr schlecht und auch die Kommunikation machte Probleme.
+Die Zusammenarbeit haperte sehr in unserem Team.
+Unser Zeitmanagement war sehr schlecht und auch die Kommunikation war Problematisch.
 Anfangs wussten wir gar nicht was wir eigentlich machen sollten und machten dann nichts dagegen.
-Leider hat Tenzin das Dossier welches wir von der Schule bekommen haben warscheinlich nicht ein einziges mal durchgelesen.
+Leider hat Tenzin das Dossier, welches wir von der Schule bekommen haben, warscheinlich nicht ein einziges mal durchgelesen.
+Was ich schnell merkte da fast gar nichts den vorgaben entsprach.
 Dazu kam das Tenzin für die Einleitung und das Abstract verantwortlich war.
-Als ich die Einleitung und das Abstract anschaute wurde mir klar, dass ich fast alles nochmal umschreiben muss.
+Als ich die Einleitung und das Abstract anschaute wurde mir klar, dass ich fast alles umschreiben muss.
 Auch die anderen Teile der Arbeit waren sehr umgangssprachlich geschrieben.
 Ich musste extrem viel der Arbeit umschreiben oder neu schreiben, was dazu führe das ich am letzten Wochenende so lange daran arbeitete.
 Leider muss ich sagen das ich ca. 80% der Arbeit geschrieben habe, da ich so viel ändern musste.
-Dies frustrierte mich auch da ich sehr viel alleine machen musste.
+Dies frustrierte mich, da ich sehr viel alleine machen musste.
 Auch als ich versuchte mit Tenzin zusammenzuarbeiten wurde nicht daraus.
-Ich versuchte ihn zu mir einzuladen sodass wir die Arbeit zusammen überarbeiten könnten, jedoch konnte er sich die Zeit dafür nicht nehmen und ich musste alles alleine machen.
+Ich versuchte ihn zu mir einzuladen, sodass wir die Arbeit zusammen überarbeiten könnten, jedoch konnte er sich die Zeit dafür nicht nehmen und ich musste alles alleine machen.
 
 == Erkenntnisse
 
 Mir wurde klar, dass ich klare Probleme im Zeitmanagement habe.
 Jedoch liegt mir das Schreiben, da ich zwar lange an der Arbeit geschrieben habe, aber ich nie die Lust daran verlor.
-Ich würde sagen das ich sehr gut am Ball bleiben kann, wenn ich mal angefangen habe zu Arbeiten.
+Ich würde sagen das ich sehr gut am Ball bleiben kann, wenn ich mal angefangen habe zu schreiben.
 Anfangs war ich zu leichtsinnig und habe mich nicht sehr auf die Arbeit konzentriert.
 Schnell merkte ich das es so nicht weiter geht und ich mich mehr auf die Arbeit konzentriern muss.
 Eine klare schwäche ist meine Rechtschreibung.
@@ -58,6 +59,6 @@ Ausserdem konnte ich mich gut in das Thema einlesen und fand dies auch sehr Span
 In Zukunft würde ich eine Wissenschaftliche Arbeit nie wieder zu zweit schreiben.
 Zu viele Störfaktoren und am Schluss schreibt eine Person fast die ganze Arbeit alleine.
 Ich muss mich ganz klar noch im Zeitmamagement verbessern, dazu sollte ich auch an meiner Rechtschreibung und meiner Kommunikation mit Teammitglider arbeiten.
-Ich wäre bei einer nächsten Arbeit klar definieren was genau ich mache.
+Ich würde bei einer nächsten Arbeit klar definieren was genau ich mache.
 Einen guten Zeitplan erstellen und möglichst gut mit Teammitglider in Kontakt bleiben.
 Dazu werde ich den Zeitplan in einer weiteren Arbeit strikter einhalten und befolgen.
